[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chromoscope"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Sehi L'Yi", email = "sehi_lyi@hms.harvard.edu" },
  { name = "Trevor Manz", email = "trevor.j.manz@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "servir>=0.0.5",
  "jinja2"
]

[project.urls]
Documentation = "https://github.com/hms-dbmi/chromoscope#readme"
Issues = "https://github.com/hms-dbmi/chromoscope/issues"
Source = "https://github.com/hms-dbmi/chromoscope"

[tool.hatch.version]
path = "src/chromoscope/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "jupyterlab",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11"]
